--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         <input type="text" name="ing7">
         <input type="text" name="ing8">
         <input type="text" name="ing9">
-        <input type="submit" name="submit" value="Get Cooking!">
+        <input type="submit" id="getcooking" name="submit" value="Get Cooking!">
     </form>
     <nav id="recipesNav">
         
